cleans cards and file names

--- a/source/_patterns/components/alerts/alert.hbs
+++ b/source/_patterns/components/alerts/alert.hbs
@@ -1,5 +1,5 @@
 <div class="alert {{ alertClass }}" role="alert">
-  <span class="pf-alert__icon pficon {{ alertIcon }}"></span>
+  <span class="pf-alert__icon pf-icon {{ alertIcon }}"></span>
   <div class="pf-alert__text">
     <strong>{{ alertBoldText }}</strong> {{ alertText }} <a href="#" class="alert-link">{{ alertLinkText }}</a>.
   </div>
