--- a/source/_patterns/templates/cardview/cardview.hbs
+++ b/source/_patterns/templates/cardview/cardview.hbs
@@ -1,5 +1,5 @@
 
-<div class="container container-fluid pf-alt-background">
+<div class="container-fluid pf-alt-background">
 
   <div class="row">
     <div class="col-md-3 col-sm-4">
