cleans comments on scss files

--- a/source/scss/_pf-basic-fonts.scss
+++ b/source/scss/_pf-basic-fonts.scss
@@ -15,11 +15,11 @@
 
 
 
-/*
- * Fonts
- *
- * PatternFly uses Overpass and Overpass mono http://overpassfont.org/
- */
+//
+// Fonts
+// --------------------------------------------------
+// PatternFly uses Overpass and Overpass mono http://overpassfont.org/
+//
 
 
 // Overpass
