--- a/source/scss/_pf-basic-type.scss
+++ b/source/scss/_pf-basic-type.scss
@@ -14,9 +14,11 @@ limitations under the License.
 */
 
 //
-// Font weights
-//
+// Typography
+// --------------------------------------------------
 
+
+// Font weights
 body { font-weight:    $pf-font-weight-regular;}
 h4, .h4 { font-weight: $pf-font-weight-semi-bold; }
 strong{ font-weight:   $pf-font-weight-bold; }
