--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -2692,8 +2692,8 @@ limitations under the License.
 
 @font-face {
   font-family: 'overpass';
-  src: url("../fonts/overpass-regular-italic.eot");
-  src: url("../fonts/overpass-regular-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-regular-italic.woff2") format("woff2"), url("../fonts/overpass-regular-italic.woff") format("woff"), url("../fonts/overpass-regular-italic.ttf") format("truetype");
+  src: url("../fonts/overpass-italic.eot");
+  src: url("../fonts/overpass-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-italic.woff2") format("woff2"), url("../fonts/overpass-italic.woff") format("woff"), url("../fonts/overpass-italic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic; }
 
@@ -5835,7 +5835,8 @@ limitations under the License.
   border-width: 0 0 2px 0;
   border-color: transparent;
   margin: 0.7rem 1rem 0;
-  padding: 0 0 0.25rem 0; }
+  padding: 0 0 0.25rem 0;
+  font-size: 1rem; }
   .pf-nav-tabs .nav-link:focus, .pf-nav-tabs .nav-link:active, .pf-nav-tabs .nav-link:hover {
     border-color: #ddd; }
   .pf-nav-tabs .nav-link.active {
@@ -5847,7 +5848,6 @@ limitations under the License.
   margin-top: -1px; }
 
 .nav-tabs + .pf-nav-tabs .nav-link {
-  font-size: 1rem;
   padding-bottom: 0.25rem; }
 
 .nav-tabs + .pf-nav-tabs .dropdown-menu {
