--- a/source/scss/_pf-basic-fonts.scss
+++ b/source/scss/_pf-basic-fonts.scss
@@ -102,11 +102,11 @@
 
 @font-face {
   font-family: 'overpass';
-  src: url('#{$pf-font-path}/overpass-regular-italic.eot');
-  src: url('#{$pf-font-path}/overpass-regular-italic.eot?#iefix') format('embedded-opentype'),
-       url('#{$pf-font-path}/overpass-regular-italic.woff2') format('woff2'),
-       url('#{$pf-font-path}/overpass-regular-italic.woff') format('woff'),
-       url('#{$pf-font-path}/overpass-regular-italic.ttf')  format('truetype');
+  src: url('#{$pf-font-path}/overpass-italic.eot');
+  src: url('#{$pf-font-path}/overpass-italic.eot?#iefix') format('embedded-opentype'),
+       url('#{$pf-font-path}/overpass-italic.woff2') format('woff2'),
+       url('#{$pf-font-path}/overpass-italic.woff') format('woff'),
+       url('#{$pf-font-path}/overpass-italic.ttf')  format('truetype');
        font-weight: 500;
        font-style: italic;
 }
