changes names of sass files

--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -19,8 +19,8 @@ limitations under the License.
 
 
 // Core: variables and mixins
-@import "pf-basic-colors";
-@import "pf-basic-variables";
+@import "pf-colors";
+@import "pf-variables";
 @import "node_modules/bootstrap/scss/variables";
 @import "pf-basic-mixins";
 @import "node_modules/bootstrap/scss/mixins";
