--- a/source/scss/_pf-basic-buttons.scss
+++ b/source/scss/_pf-basic-buttons.scss
@@ -37,3 +37,10 @@ limitations under the License.
 .btn-danger {
   @include pf-button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-start-bg, $btn-danger-end-bg,  $btn-danger-border);
 }
+
+.btn-link{
+  & .fa, & .pf-icon{
+    color: $pf-color-black-900;
+    @include hover-focus-active { color: $link-color; }
+  }
+}
