adds basic table

--- a/source/scss/_pf-variables.scss
+++ b/source/scss/_pf-variables.scss
@@ -71,70 +71,70 @@ $pf-icon-size-lg: 3.3rem;
 $pf-icon-size-md: 1.75rem;
 $pf-icon-size-sm: 1.5rem;
 
-$pf-icon-var-add-circle-o:                                           "\e61b";
-$pf-icon-var-middleware:                                             "\e917";
-$pf-icon-var-blueprint:                                              "\e915";
-$pf-icon-var-build:                                                  "\e902";
-$pf-icon-var-builder-image:                                          "\e800";
-$pf-icon-var-bundle:                                                 "\e918";
-$pf-icon-var-close:                                                  "\e60b";
-$pf-icon-var-cloud-security:                                         "\e903";
-$pf-icon-var-cloud-tenant:                                           "\e904";
-$pf-icon-var-cluster:                                                "\e620";
-$pf-icon-var-container-node:                                         "\e621";
-$pf-icon-var-cpu:                                                    "\e905";
-$pf-icon-var-delete:                                                 "\e611";
-$pf-icon-var-domain:                                                 "\e919";
-$pf-icon-var-edit:                                                   "\e60a";
-$pf-icon-var-enterprise:                                             "\e906";
-$pf-icon-var-error-circle-o:                                         "\e61d";
-$pf-icon-var-export:                                                 "\e616";
-$pf-icon-var-flag:                                                   "\e603";
-$pf-icon-var-flavor:                                                 "\e907";
-$pf-icon-var-folder-close:                                           "\e607";
-$pf-icon-var-folder-open:                                            "\e606";
-$pf-icon-var-help:                                                   "\e605";
-$pf-icon-var-history:                                                "\e617";
-$pf-icon-var-home:                                                   "\e618";
-$pf-icon-var-image:                                                  "\e61f";
-$pf-icon-var-import:                                                 "\e615";
-$pf-icon-var-info:                                                   "\e604";
-$pf-icon-var-kubernetes:                                             "\e627";
-$pf-icon-var-memory:                                                 "\e908";
-$pf-icon-var-network:                                                "\e909";
-$pf-icon-var-ok:                                                     "\e602";
-$pf-icon-var-openshift:                                              "\e626";
-$pf-icon-var-private:                                                "\e914";
-$pf-icon-var-print:                                                  "\e612";
-$pf-icon-var-project:                                                "\e622";
-$pf-icon-var-regions:                                                "\e90a";
-$pf-icon-var-registry:                                               "\e623";
-$pf-icon-var-replicator:                                             "\e624";
-$pf-icon-var-repository:                                             "\e90b";
-$pf-icon-var-resource-pool:                                          "\e90c";
-$pf-icon-var-resources-almost-full:                                  "\e912";
-$pf-icon-var-resources-full:                                         "\e913";
-$pf-icon-var-restart:                                                "\e613";
-$pf-icon-var-route:                                                  "\e625";
-$pf-icon-var-running:                                                "\e614";
-$pf-icon-var-save:                                                   "\e601";
-$pf-icon-var-screen:                                                 "\e600";
-$pf-icon-var-server:                                                 "\e90d";
-$pf-icon-var-server-group:                                           "\e91a";
-$pf-icon-var-service:                                                "\e61e";
-$pf-icon-var-settings:                                               "\e610";
-$pf-icon-var-storage-domain:                                         "\e90e";
-$pf-icon-var-tenant:                                                 "\e916";
-$pf-icon-var-thumb-tack-o:                                           "\e609";
-$pf-icon-var-topology:                                               "\e608";
-$pf-icon-var-trend-down:                                             "\e900";
-$pf-icon-var-trend-up:                                               "\e901";
-$pf-icon-var-user:                                                   "\e60e";
-$pf-icon-var-users:                                                  "\e60f";
-$pf-icon-var-virtual-machine:                                        "\e90f";
-$pf-icon-var-volume:                                                 "\e910";
-$pf-icon-var-warning-triangle-o:                                     "\e61c";
-$pf-icon-var-zone:                                                   "\e911";
+$pf-icon-var-add-circle-o:               "\e61b";
+$pf-icon-var-middleware:                 "\e917";
+$pf-icon-var-blueprint:                  "\e915";
+$pf-icon-var-build:                      "\e902";
+$pf-icon-var-builder-image:              "\e800";
+$pf-icon-var-bundle:                     "\e918";
+$pf-icon-var-close:                      "\e60b";
+$pf-icon-var-cloud-security:             "\e903";
+$pf-icon-var-cloud-tenant:               "\e904";
+$pf-icon-var-cluster:                    "\e620";
+$pf-icon-var-container-node:             "\e621";
+$pf-icon-var-cpu:                        "\e905";
+$pf-icon-var-delete:                     "\e611";
+$pf-icon-var-domain:                     "\e919";
+$pf-icon-var-edit:                       "\e60a";
+$pf-icon-var-enterprise:                 "\e906";
+$pf-icon-var-error-circle-o:             "\e61d";
+$pf-icon-var-export:                     "\e616";
+$pf-icon-var-flag:                       "\e603";
+$pf-icon-var-flavor:                     "\e907";
+$pf-icon-var-folder-close:               "\e607";
+$pf-icon-var-folder-open:                "\e606";
+$pf-icon-var-help:                       "\e605";
+$pf-icon-var-history:                    "\e617";
+$pf-icon-var-home:                       "\e618";
+$pf-icon-var-image:                      "\e61f";
+$pf-icon-var-import:                     "\e615";
+$pf-icon-var-info:                       "\e604";
+$pf-icon-var-kubernetes:                 "\e627";
+$pf-icon-var-memory:                     "\e908";
+$pf-icon-var-network:                    "\e909";
+$pf-icon-var-ok:                         "\e602";
+$pf-icon-var-openshift:                  "\e626";
+$pf-icon-var-private:                    "\e914";
+$pf-icon-var-print:                      "\e612";
+$pf-icon-var-project:                    "\e622";
+$pf-icon-var-regions:                    "\e90a";
+$pf-icon-var-registry:                   "\e623";
+$pf-icon-var-replicator:                 "\e624";
+$pf-icon-var-repository:                 "\e90b";
+$pf-icon-var-resource-pool:              "\e90c";
+$pf-icon-var-resources-almost-full:      "\e912";
+$pf-icon-var-resources-full:             "\e913";
+$pf-icon-var-restart:                    "\e613";
+$pf-icon-var-route:                      "\e625";
+$pf-icon-var-running:                    "\e614";
+$pf-icon-var-save:                       "\e601";
+$pf-icon-var-screen:                     "\e600";
+$pf-icon-var-server:                     "\e90d";
+$pf-icon-var-server-group:               "\e91a";
+$pf-icon-var-service:                    "\e61e";
+$pf-icon-var-settings:                   "\e610";
+$pf-icon-var-storage-domain:             "\e90e";
+$pf-icon-var-tenant:                     "\e916";
+$pf-icon-var-thumb-tack-o:               "\e609";
+$pf-icon-var-topology:                   "\e608";
+$pf-icon-var-trend-down:                 "\e900";
+$pf-icon-var-trend-up:                   "\e901";
+$pf-icon-var-user:                       "\e60e";
+$pf-icon-var-users:                      "\e60f";
+$pf-icon-var-virtual-machine:            "\e90f";
+$pf-icon-var-volume:                     "\e910";
+$pf-icon-var-warning-triangle-o:         "\e61c";
+$pf-icon-var-zone:                       "\e911";
 
 // Colors
 //
@@ -317,8 +317,8 @@ $font-size-relative-xs:   .75em !default;
 //
 // Customizes the `.table` component with basic values, each used across all table variations.
 
-// $table-cell-padding:            .7rem !default;
-// $table-sm-cell-padding:         .3rem !default;
+$table-cell-padding:            $pf-spacer-xs !default;
+$table-sm-cell-padding:         $pf-spacer-xxxs !default;
 
 
 // $table-bg:                      transparent !default;
