--- a/source/scss/_pf-basic-tags.scss
+++ b/source/scss/_pf-basic-tags.scss
@@ -32,5 +32,6 @@ limitations under the License.
   a{
     color: $pf-color-white;
     margin-left: $pf-spacer-xxxs;
+    vertical-align: text-bottom;
   }
 }
