--- a/source/_patterns/templates/typography/typography.hbs
+++ b/source/_patterns/templates/typography/typography.hbs
@@ -2,15 +2,15 @@
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col-md-12">
-      <h3 class="mb-pf-xxl">PatternFly Typography</h3>
+    <div class="col-md-12 mb-pf-xxxxl">
+      <h3 class="my-pf-xxl">PatternFly Typography</h3>
 
       <p>Patternfly uses Overpass, an open-licensed alternative to Interstate that is specifically for use on-screen and in our software. Like Interstate, Overpass is based on the FHWA (Federal Highway Administration) series of fonts, which has been used for US Highway signage since 1945. <a href="#">Download Overpass »</a></p>
 
       <p>Overpass can be used in a lot of the same ways as Interstate. We use Overpass for all web text, editable presentations, and product interfaces.</p>
 
 
-      <table class="table">
+      <table class="table mb-pf-xxxxl">
         <tbody>
           <tr>
             <td class="py-1"><h1 class="mb-0">Heading 1</h1></td>
@@ -50,10 +50,6 @@
         </tbody>
       </table>
 
-
-    </div>
-
-    <div class="col-md-12">
 
       <h3 class="mb-pf-xl">Application Heading 3</h3>
 
