--- a/css/patternfly.css
+++ b/css/patternfly.css
@@ -4533,7 +4533,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   .btn:active, .btn.active {
     background-image: none;
     outline: 0;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn.disabled, .btn:disabled {
     cursor: not-allowed;
     opacity: .65;
@@ -4547,7 +4547,7 @@ fieldset[disabled] a.btn {
   color: #fff;
   background-color: #0088ce;
   border-color: #00659c;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-primary:hover {
     color: #fff;
     background-color: #00669b;
@@ -4562,7 +4562,7 @@ fieldset[disabled] a.btn {
     background-color: #00669b;
     border-color: #003d5f;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus,
     .open > .btn-primary.dropdown-toggle:hover,
     .open > .btn-primary.dropdown-toggle:focus,
@@ -4581,7 +4581,7 @@ fieldset[disabled] a.btn {
   color: #292e34;
   background-color: #fff;
   border-color: #bbb;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-secondary:hover {
     color: #292e34;
     background-color: #e6e6e6;
@@ -4596,7 +4596,7 @@ fieldset[disabled] a.btn {
     background-color: #e6e6e6;
     border-color: #9c9c9c;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-secondary:active:hover, .btn-secondary:active:focus, .btn-secondary:active.focus, .btn-secondary.active:hover, .btn-secondary.active:focus, .btn-secondary.active.focus,
     .open > .btn-secondary.dropdown-toggle:hover,
     .open > .btn-secondary.dropdown-toggle:focus,
@@ -4615,7 +4615,7 @@ fieldset[disabled] a.btn {
   color: #fff;
   background-color: #00659c;
   border-color: #004368;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-info:hover {
     color: #fff;
     background-color: #004469;
@@ -4630,7 +4630,7 @@ fieldset[disabled] a.btn {
     background-color: #004469;
     border-color: #001c2b;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-info:active:hover, .btn-info:active:focus, .btn-info:active.focus, .btn-info.active:hover, .btn-info.active:focus, .btn-info.active.focus,
     .open > .btn-info.dropdown-toggle:hover,
     .open > .btn-info.dropdown-toggle:focus,
@@ -4649,7 +4649,7 @@ fieldset[disabled] a.btn {
   color: #fff;
   background-color: #3f9c35;
   border-color: #2d7623;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-success:hover {
     color: #fff;
     background-color: #307628;
@@ -4664,7 +4664,7 @@ fieldset[disabled] a.btn {
     background-color: #307628;
     border-color: #1b4715;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-success:active:hover, .btn-success:active:focus, .btn-success:active.focus, .btn-success.active:hover, .btn-success.active:focus, .btn-success.active.focus,
     .open > .btn-success.dropdown-toggle:hover,
     .open > .btn-success.dropdown-toggle:focus,
@@ -4683,7 +4683,7 @@ fieldset[disabled] a.btn {
   color: #fff;
   background-color: #ec7a08;
   border-color: #b35c00;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-warning:hover {
     color: #fff;
     background-color: #bb6106;
@@ -4698,7 +4698,7 @@ fieldset[disabled] a.btn {
     background-color: #bb6106;
     border-color: #763d00;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-warning:active:hover, .btn-warning:active:focus, .btn-warning:active.focus, .btn-warning.active:hover, .btn-warning.active:focus, .btn-warning.active.focus,
     .open > .btn-warning.dropdown-toggle:hover,
     .open > .btn-warning.dropdown-toggle:focus,
@@ -4717,7 +4717,7 @@ fieldset[disabled] a.btn {
   color: #fff;
   background-color: #cc0000;
   border-color: #8b0000;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-danger:hover {
     color: #fff;
     background-color: #990000;
@@ -4732,7 +4732,7 @@ fieldset[disabled] a.btn {
     background-color: #990000;
     border-color: #4e0000;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-danger:active:hover, .btn-danger:active:focus, .btn-danger:active.focus, .btn-danger.active:hover, .btn-danger.active:focus, .btn-danger.active.focus,
     .open > .btn-danger.dropdown-toggle:hover,
     .open > .btn-danger.dropdown-toggle:focus,
@@ -4984,7 +4984,7 @@ limitations under the License.
   color: #fff;
   background-color: #0088ce;
   border-color: #00659c;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #39a5dc 0%, #0088ce 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF39A5DC', endColorstr='#FF0088CE', GradientType=0); }
@@ -5003,7 +5003,7 @@ limitations under the License.
     background-color: #0077b5;
     border-color: #004e78;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus,
     .open > .btn-primary.dropdown-toggle:hover,
     .open > .btn-primary.dropdown-toggle:focus,
@@ -5025,7 +5025,7 @@ limitations under the License.
   color: #292e34;
   background-color: #fff;
   border-color: #bbb;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #fafafa 0%, #ededed 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFAFAFA', endColorstr='#FFEDEDED', GradientType=0); }
@@ -5044,7 +5044,7 @@ limitations under the License.
     background-color: #f2f2f2;
     border-color: darkgray;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-secondary:active:hover, .btn-secondary:active:focus, .btn-secondary:active.focus, .btn-secondary.active:hover, .btn-secondary.active:focus, .btn-secondary.active.focus,
     .open > .btn-secondary.dropdown-toggle:hover,
     .open > .btn-secondary.dropdown-toggle:focus,
@@ -5066,7 +5066,7 @@ limitations under the License.
   color: #fff;
   background-color: #00659c;
   border-color: #004368;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #0088ce 0%, #00659c 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0088CE', endColorstr='#FF00659C', GradientType=0); }
@@ -5085,7 +5085,7 @@ limitations under the License.
     background-color: #005483;
     border-color: #002c44;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-info:active:hover, .btn-info:active:focus, .btn-info:active.focus, .btn-info.active:hover, .btn-info.active:focus, .btn-info.active.focus,
     .open > .btn-info.dropdown-toggle:hover,
     .open > .btn-info.dropdown-toggle:focus,
@@ -5107,7 +5107,7 @@ limitations under the License.
   color: #fff;
   background-color: #3f9c35;
   border-color: #2d7623;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #6ec664 0%, #3f9c35 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF6EC664', endColorstr='#FF3F9C35', GradientType=0); }
@@ -5126,7 +5126,7 @@ limitations under the License.
     background-color: #37892f;
     border-color: #235a1b;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-success:active:hover, .btn-success:active:focus, .btn-success:active.focus, .btn-success.active:hover, .btn-success.active:focus, .btn-success.active.focus,
     .open > .btn-success.dropdown-toggle:hover,
     .open > .btn-success.dropdown-toggle:focus,
@@ -5148,7 +5148,7 @@ limitations under the License.
   color: #fff;
   background-color: #ec7a08;
   border-color: #b35c00;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #f39d3c 0%, #ec7a08 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFF39D3C', endColorstr='#FFEC7A08', GradientType=0); }
@@ -5167,7 +5167,7 @@ limitations under the License.
     background-color: #d36d07;
     border-color: #8f4a00;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-warning:active:hover, .btn-warning:active:focus, .btn-warning:active.focus, .btn-warning.active:hover, .btn-warning.active:focus, .btn-warning.active.focus,
     .open > .btn-warning.dropdown-toggle:hover,
     .open > .btn-warning.dropdown-toggle:focus,
@@ -5189,7 +5189,7 @@ limitations under the License.
   color: #fff;
   background-color: #cc0000;
   border-color: #8b0000;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
   background-image: linear-gradient(to bottom, #cc0000 0%, #a30000 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFCC0000', endColorstr='#FFA30000', GradientType=0); }
@@ -5208,7 +5208,7 @@ limitations under the License.
     background-color: #b30000;
     border-color: #670000;
     background-image: none;
-    box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
     .btn-danger:active:hover, .btn-danger:active:focus, .btn-danger:active.focus, .btn-danger.active:hover, .btn-danger.active:focus, .btn-danger.active.focus,
     .open > .btn-danger.dropdown-toggle:hover,
     .open > .btn-danger.dropdown-toggle:focus,
@@ -5230,6 +5230,23 @@ limitations under the License.
   color: #292e34; }
   .btn-link .fa:focus, .btn-link .fa:active, .btn-link .fa:hover, .btn-link .pf-icon:focus, .btn-link .pf-icon:active, .btn-link .pf-icon:hover {
     color: #0088ce; }
+
+.test-shadow {
+  background: #f7bd7f;
+  padding: 2em;
+  width: 50vw; }
+  .test-shadow.sm {
+    box-shadow: 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
+  .test-shadow.md {
+    box-shadow: 0 0.1rem 0.3rem 0 rgba(3, 3, 3, 0.3); }
+  .test-shadow.lg {
+    box-shadow: 0 0.2rem 0.4rem 0 rgba(3, 3, 3, 0.3); }
+  .test-shadow.inset {
+    box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
+  .test-shadow.right {
+    box-shadow: 0.2rem 0 0.5rem -0.2rem rgba(3, 3, 3, 0.3); }
+  .test-shadow.left {
+    box-shadow: -0.2rem 0 0.5rem -0.2rem rgba(3, 3, 3, 0.3); }
 
 .fade {
   opacity: 0;
@@ -5295,7 +5312,7 @@ tbody.collapse.in {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #d1d1d1;
-  box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
 
 .dropdown-divider {
   height: 1px;
@@ -5444,7 +5461,7 @@ tbody.collapse.in {
   padding-left: 0.9075rem; }
 
 .btn-group.open .dropdown-toggle {
-  box-shadow: inset 0 0.3em 0.9em rgba(3, 3, 3, 0.2); }
+  box-shadow: inset 0 0.1rem 0.1rem 0 rgba(3, 3, 3, 0.3); }
   .btn-group.open .dropdown-toggle.btn-link {
     box-shadow: none; }
 
@@ -6341,7 +6358,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 .card {
-  box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1); }
+  box-shadow: 0 0.1rem 0.3rem 0 rgba(3, 3, 3, 0.3); }
 
 .pf-card {
   border: none;
@@ -6369,7 +6386,7 @@ limitations under the License.
   .pf-card .dropdown.pf-dropdown--kebab {
     margin: -0.5rem; }
   .pf-card::after {
-    box-shadow: 0 0.1em 0.2em rgba(3, 3, 3, 0.1);
+    box-shadow: 0 0.05rem 0.1rem 0 rgba(3, 3, 3, 0.3);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -6388,7 +6405,7 @@ limitations under the License.
   border: 2px solid transparent;
   background-clip: content-box; }
   .pf-card--select:hover::after {
-    box-shadow: 0 0.1em 0.3em rgba(3, 3, 3, 0.3); }
+    box-shadow: 0 0.2rem 0.4rem 0 rgba(3, 3, 3, 0.3); }
   .pf-card--select.active {
     border-color: #39a5dc; }
 
