--- a/patterns/basics-buttons-button/basics-buttons-button.hbs
+++ b/patterns/basics-buttons-button/basics-buttons-button.hbs
@@ -4,3 +4,29 @@
  {{/if}}
  {{ btnText }}
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
