--- a/patterns/components/index.html
+++ b/patterns/components/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483638587907" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638587907" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483638587907" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638587907" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638587907" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -358,6 +358,32 @@
                <span class="fa fa-ellipsis-v "></span>
            
           </button>
+          
+          
+          <div class="test-shadow inset m-3">
+            Shadow Inset - Level -1
+          </div>
+          
+          
+          <div class="test-shadow sm m-3">
+            Shadow Small - Level 1
+          </div>
+          
+          <div class="test-shadow md m-3">
+            Shadow Medium - Level 2
+          </div>
+          
+          <div class="test-shadow lg m-3">
+            Shadow Large - Level 3
+          </div>
+          
+          <div class="test-shadow right m-3">
+            Shadow Small Right - Level 1
+          </div>
+          
+          <div class="test-shadow left m-3">
+            Shadow Small Left - Level 1
+          </div>
         <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
@@ -456,6 +482,32 @@
                <span class="fa fa-ellipsis-v "></span>
            
           </button>
+          
+          
+          <div class="test-shadow inset m-3">
+            Shadow Inset - Level -1
+          </div>
+          
+          
+          <div class="test-shadow sm m-3">
+            Shadow Small - Level 1
+          </div>
+          
+          <div class="test-shadow md m-3">
+            Shadow Medium - Level 2
+          </div>
+          
+          <div class="test-shadow lg m-3">
+            Shadow Large - Level 3
+          </div>
+          
+          <div class="test-shadow right m-3">
+            Shadow Small Right - Level 1
+          </div>
+          
+          <div class="test-shadow left m-3">
+            Shadow Small Left - Level 1
+          </div>
         <div class="dropdown-menu dropdown-menu-right">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
@@ -560,6 +612,32 @@
 <button class="btn btn-secondary" aria-labelledby="Button">
  Search
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
 
   </div>
@@ -705,14 +783,92 @@
        <span class="fa fa-th "></span>
    
   </button>
+  
+  
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+  
+  
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+  
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+  
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+  
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+  
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link pf-view-selector__btn-link active" aria-labelledby="Button">
        <span class="fa fa-th-large "></span>
    
   </button>
+  
+  
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+  
+  
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+  
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+  
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+  
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+  
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link pf-view-selector__btn-link" aria-labelledby="Button">
        <span class="fa fa-th-list "></span>
    
   </button>
+  
+  
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+  
+  
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+  
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+  
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+  
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+  
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 </div>
 
   </div>
@@ -762,10 +918,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483638587907">
+<script id="pl-js-polyfill-insert-1483705214026">
   (function() {
     if (self != top) {
-      var cb = '1483638587907';
+      var cb = '1483705214026';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -775,10 +931,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1483638587907">
+<script id="pl-js-insert-1483705214026">
   (function() {
     if (self != top) {
-      var cb = '1483638587907';
+      var cb = '1483705214026';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
