adds tables classes

--- a/source/_patterns/basics/table/table.hbs
+++ b/source/_patterns/basics/table/table.hbs
@@ -1,9 +1,11 @@
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table {{#if tableInverse}}table-inverse{{/if}} {{#if
+  tableStriped}}table-striped{{/if}} {{#if tableBordered}}table-bordered{{/if}}
+  {{#if tableHover}}table-hover{{#/if}} {{#if tableSmall}}table-sm{{#/if}}">
     <thead>
       <tr>
         <th>Session</th>
-        <th class="text-right">Course Number</th>
+        <th>Course Number</th>
         <th>Title</th>
         <th>Level</th>
         <th>Course Format</th>
