adds tables variations

--- a/source/_patterns/basics/table/table.hbs
+++ b/source/_patterns/basics/table/table.hbs
@@ -1,7 +1,5 @@
 <div class="table-responsive">
-  <table class="table {{#if tableInverse}}table-inverse{{/if}} {{#if
-  tableStriped}}table-striped{{/if}} {{#if tableBordered}}table-bordered{{/if}}
-  {{#if tableHover}}table-hover{{#/if}} {{#if tableSmall}}table-sm{{#/if}}">
+  <table class="table {{#if tableStriped}}table-striped{{/if}} {{#if tableBordered}}table-bordered{{/if}} {{#if tableHover}}table-hover{{/if}} {{#if tableSmall}}table-sm{{/if}}">
     <thead>
       <tr>
         <th>Session</th>
@@ -23,7 +21,7 @@
         <td>T </td>
         <td>20115</td>
       </tr>
-      <tr>
+      <tr class="{{#if tableActive}}table-active{{/if}}">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6020</td>
         <td>Ethical Issues in Organizational Communication</td>
@@ -32,7 +30,7 @@
         <td>W </td>
         <td>21509</td>
       </tr>
-      <tr>
+      <tr class="{{#if tableSuccess}}table-success{{/if}}">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6050</td>
         <td>Crisis Communication</td>
@@ -41,7 +39,7 @@
         <td>W </td>
         <td>20915</td>
       </tr>
-      <tr>
+      <tr class="{{#if tableInfo}}table-info{{/if}}">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6050</td>
         <td>Crisis Communication</td>
@@ -50,7 +48,7 @@
         <td>Th </td>
         <td>21550</td>
       </tr>
-      <tr>
+      <tr class="{{#if tableWarning}}table-warning{{/if}}">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6060</td>
         <td>Negotiation, Mediation, and Facilitation</td>
@@ -59,7 +57,7 @@
         <td>Th </td>
         <td>20119</td>
       </tr>
-      <tr>
+      <tr class="{{#if tableDanger}}table-danger{{/if}}">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6060</td>
         <td>Negotiation, Mediation, and Facilitation</td>
