Added files from commit #20e167bb7e25f236ff719ede9fd8a068e845990c

--- a/patterns/basics-forms-input/basics-forms-input.hbs
+++ b/patterns/basics-forms-input/basics-forms-input.hbs
@@ -1,1 +1,5 @@
-<input id="text" type="text" placeholder="Text Input">
+<form class="form-inline">
+  <label class="sr-only" for="inlineFormInput">Name</label>
+  <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
