--- a/source/scss/_pf-basic-type.scss
+++ b/source/scss/_pf-basic-type.scss
@@ -22,3 +22,9 @@ limitations under the License.
 body { font-weight:    $pf-font-weight-regular;}
 h4, .h4 { font-weight: $pf-font-weight-semi-bold; }
 strong{ font-weight:   $pf-font-weight-bold; }
+
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: $pf-headings-margin-top;
+}
+
