--- a/css/patternfly.css
+++ b/css/patternfly.css
@@ -3197,7 +3197,7 @@ output {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   font-family: inherit;
   font-weight: 400;
   line-height: 1.1;
@@ -3322,6 +3322,9 @@ h4, .h4 {
 
 strong {
   font-weight: 700; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 1.75rem; }
 
 .img-fluid, .carousel-inner > .carousel-item > img,
 .carousel-inner > .carousel-item > a > img {
@@ -4273,7 +4276,7 @@ limitations under the License.
   width: 100%;
   padding: 0.7rem 0.7rem;
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1.25;
   color: #4d5258;
   background-color: #fff;
   background-image: none;
@@ -4334,7 +4337,7 @@ select.form-control:focus::-ms-value {
 .form-control-static {
   padding-top: 0.7rem;
   padding-bottom: 0.7rem;
-  line-height: 1;
+  line-height: 1.25;
   border: solid transparent;
   border-width: 1px 0; }
   .form-control-static.form-control-sm, .input-group-sm > .form-control-static.form-control,
@@ -5517,7 +5520,7 @@ tbody.collapse.in {
   margin-bottom: 0;
   font-size: 1rem;
   font-weight: normal;
-  line-height: 1;
+  line-height: 1.25;
   color: #4d5258;
   text-align: center;
   background-color: #d1d1d1;
