Updates to bootstrap alpha 6

--- a/source/_patterns/basics/badges/badge.hbs
+++ b/source/_patterns/basics/badges/badge.hbs
@@ -1,6 +1,6 @@
-<span class="tag {{ tagClass }}">
-  {{ tagText }}
-  {{#if tagDismissable }}
+<span class="badge {{ badgeClass }}">
+  {{ badgeText }}
+  {{#if badgeDismissable }}
     <a href="#">
       {{> basics-icon iconFamily="pf-icon" iconName="pf-icon-close" }}
     </a>
