--- a/source/_patterns/basics/tabs/tabs.hbs
+++ b/source/_patterns/basics/tabs/tabs.hbs
@@ -15,7 +15,7 @@ secondaryDropdownActive - shows the dropdown open if true
   <li role="presentation" class="nav-item"><a href="#" class="nav-link">Tab Five</a></li>
 
   {{#if dropdown }}
-  <li role="presentation" class="nav-item dropdown {{#if dropdownActive }}open{{/if }}">
+  <li role="presentation" class="nav-item dropdown {{#if dropdownActive }}show{{/if }}">
     <a class="nav-link dropdown-toggle active"
     role="button"
     aria-haspopup="true"
@@ -43,7 +43,8 @@ secondaryDropdownActive - shows the dropdown open if true
   <li role="presentation" class="nav-item"><a href="#" class="nav-link disabled">Secondary Disabled</a></li>
   <li role="presentation" class="nav-item"><a href="#" class="nav-link">Secondary Tab Five</a></li>
   {{#if secondaryDropdown }}
-    <li role="presentation" class="nav-item dropdown {{#if secondaryDropdownActive }}open{{/if }}">
+    <li role="presentation" class="nav-item dropdown {{#if
+      secondaryDropdownActive }}show{{/if }}">
       <a class="nav-link dropdown-toggle {{#if secondaryDropdownActive}} active {{/if }}"
         role="button"
         aria-haspopup="true"
