--- a/source/_patterns/basics/dropdowns/dropdown-states.hbs
+++ b/source/_patterns/basics/dropdowns/dropdown-states.hbs
@@ -1,2 +1,2 @@
 {{> basics-dropdown dropdownText="Closed Dropdown"  }}
-{{> basics-dropdown dropdownText="Open Dropdown" dropdownState="open" }}
+{{> basics-dropdown dropdownText="Open Dropdown" dropdownState="show" }}
