--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -50,7 +50,7 @@ limitations under the License.
 @import "pf-basic-buttons";
 
 // Components
-@import "node_modules/bootstrap/scss/animation";
+@import "node_modules/bootstrap/scss/transitions";
 @import "node_modules/bootstrap/scss/dropdown";
 @import "node_modules/bootstrap/scss/button-group";
 @import "node_modules/bootstrap/scss/input-group";
@@ -63,8 +63,8 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/breadcrumb";
 @import "node_modules/bootstrap/scss/pagination";
 @import "pf-component-pagination";
-@import "node_modules/bootstrap/scss/tags";
-@import "pf-basic-tags";
+@import "node_modules/bootstrap/scss/badge";
+@import "pf-basic-badge";
 @import "node_modules/bootstrap/scss/jumbotron";
 @import "node_modules/bootstrap/scss/alert";
 @import "pf-component-alert";
@@ -83,5 +83,5 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/carousel";
 
 // Utility classes
-@import "pf-utilities";
 @import "node_modules/bootstrap/scss/utilities";
+@import "pf-utilities";
